Changed <downloads> to be flex and fixed footer overlapping main sections

--- a/styles/style.less
+++ b/styles/style.less
@@ -60,6 +60,7 @@ button {
     border: 1px solid rgba(0,0,0,0.3);
     border-bottom-width: 3px;
     margin: 5px 10px;
+    transition: .3s ease;
 }
 
 button[enabled]:hover {
@@ -109,9 +110,8 @@ header {
 
 footer {
     position: absolute;
-    bottom: 0px;
+    bottom: -50px;
     left: 0;
-    right: 0;
     width: 100%;
     height: 50px;
     font-size: 16px;
@@ -122,15 +122,21 @@ footer {
     }
 }
 
+#footer__margin {
+    margin: 50px 0;
+}
+
 //-------------------- Downloads --------------------\\
 
 .downloads {
-    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+    flex-wrap: wrap;
     padding: 15px 30px;
     ul {
         padding: 0;
         list-style: none;
-        display: inline-block;
         min-width: 350px;
         max-width: 400px;
         vertical-align: top;
@@ -154,6 +160,11 @@ footer {
     img {
         padding: 0 25px;
         max-width: 350px;
+        box-sizing: border-box;
+        transition: 1s ease;
+    }
+    img:hover {
+        transform: scale(1.1);
     }
 }
 
